test/scc_test/exp/semantic-errors/026.a
026.t:3:12: error: incomplete type is not allowed